[gd_scene format=3 uid="uid://bbndjpxi0rsfl"]

[ext_resource type="Script" uid="uid://dojmnkspqsjab" path="res://scn/Mobs/skeleton.gd" id="1_8neyt"]
[ext_resource type="Texture2D" uid="uid://bqvae5kpk2gq0" path="res://Asset/Skeleton enemy/Skeleton enemy.png" id="1_bs4jm"]
[ext_resource type="PackedScene" uid="uid://cabdmahwqiuae" path="res://DamageBox/damage_box.tscn" id="3_opxtk"]
[ext_resource type="PackedScene" uid="uid://c0exyavrok6s" path="res://scn/Mobs/mobs_health.tscn" id="4_vf8bf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bs4jm"]
radius = 16.0
height = 52.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8neyt"]
atlas = ExtResource("1_bs4jm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kuho"]
atlas = ExtResource("1_bs4jm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwbpb"]
atlas = ExtResource("1_bs4jm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hjwy"]
atlas = ExtResource("1_bs4jm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1f85"]
atlas = ExtResource("1_bs4jm")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjg8j"]
atlas = ExtResource("1_bs4jm")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gikci"]
atlas = ExtResource("1_bs4jm")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3usgg"]
atlas = ExtResource("1_bs4jm")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_23d64"]
atlas = ExtResource("1_bs4jm")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym868"]
atlas = ExtResource("1_bs4jm")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gri6"]
atlas = ExtResource("1_bs4jm")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nj54"]
atlas = ExtResource("1_bs4jm")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqdpr"]
atlas = ExtResource("1_bs4jm")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe7ya"]
atlas = ExtResource("1_bs4jm")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx466"]
atlas = ExtResource("1_bs4jm")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6nr3"]
atlas = ExtResource("1_bs4jm")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oag0n"]
atlas = ExtResource("1_bs4jm")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ihtp"]
atlas = ExtResource("1_bs4jm")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw3cg"]
atlas = ExtResource("1_bs4jm")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyexo"]
atlas = ExtResource("1_bs4jm")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwne6"]
atlas = ExtResource("1_bs4jm")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ud"]
atlas = ExtResource("1_bs4jm")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3dga"]
atlas = ExtResource("1_bs4jm")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsi8e"]
atlas = ExtResource("1_bs4jm")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_htqgt"]
atlas = ExtResource("1_bs4jm")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cmde"]
atlas = ExtResource("1_bs4jm")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxgoq"]
atlas = ExtResource("1_bs4jm")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjtkm"]
atlas = ExtResource("1_bs4jm")
region = Rect2(704, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwcb5"]
atlas = ExtResource("1_bs4jm")
region = Rect2(768, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_met4f"]
atlas = ExtResource("1_bs4jm")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxxm6"]
atlas = ExtResource("1_bs4jm")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kisbe"]
atlas = ExtResource("1_bs4jm")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t80fy"]
atlas = ExtResource("1_bs4jm")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_opxtk"]
atlas = ExtResource("1_bs4jm")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf8bf"]
atlas = ExtResource("1_bs4jm")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu3ts"]
atlas = ExtResource("1_bs4jm")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge73t"]
atlas = ExtResource("1_bs4jm")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o3t3"]
atlas = ExtResource("1_bs4jm")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgk6n"]
atlas = ExtResource("1_bs4jm")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg5n8"]
atlas = ExtResource("1_bs4jm")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ych35"]
atlas = ExtResource("1_bs4jm")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7nc7"]
atlas = ExtResource("1_bs4jm")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_audjf"]
atlas = ExtResource("1_bs4jm")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yh7c"]
atlas = ExtResource("1_bs4jm")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uuj0"]
atlas = ExtResource("1_bs4jm")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u52g4"]
atlas = ExtResource("1_bs4jm")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y8dj"]
atlas = ExtResource("1_bs4jm")
region = Rect2(576, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_de06e"]
atlas = ExtResource("1_bs4jm")
region = Rect2(640, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_35upa"]
atlas = ExtResource("1_bs4jm")
region = Rect2(704, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_k3hpn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8neyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kuho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwbpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hjwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1f85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjg8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gikci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3usgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23d64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym868")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gri6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nj54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqdpr")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe7ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx466")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6nr3")
}],
"loop": false,
"name": &"Damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oag0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ihtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw3cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyexo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwne6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3dga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsi8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htqgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cmde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxgoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjtkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwcb5")
}],
"loop": false,
"name": &"Death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_met4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxxm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kisbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t80fy")
}],
"loop": true,
"name": &"Idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opxtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf8bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu3ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge73t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opxtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf8bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu3ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge73t")
}],
"loop": false,
"name": &"Recover",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o3t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgk6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg5n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ych35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7nc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_audjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yh7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uuj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u52g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y8dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de06e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35upa")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_4u5n0"]
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4003807, 0.50354004, 0.8017828, 0.9039207),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_oikjk"]
length = 0.375
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Damage"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uhxtc"]
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11111111, 0.22222222, 0.33333334, 0.44444445, 0.5555556, 0.6666667, 0.7777778, 0.8888889, 1, 1.1111112, 1.2222222, 1.3333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../AttackDirection/DamageBox/HurtBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4w2lp"]
length = 0.44444445
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.11111111, 0.22222222, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_opxtk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AttackDirection/DamageBox/HurtBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_vf8bf"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Recover"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6rhop"]
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pftsd"]
_data = {
&"Attack": SubResource("Animation_4u5n0"),
&"Damage": SubResource("Animation_oikjk"),
&"Death": SubResource("Animation_uhxtc"),
&"Idle": SubResource("Animation_4w2lp"),
&"RESET": SubResource("Animation_opxtk"),
&"Recover": SubResource("Animation_vf8bf"),
&"Run": SubResource("Animation_6rhop")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8neyt"]
size = Vector2(22, 38)

[node name="Skeleton" type="CharacterBody2D" unique_id=1529395668]
collision_layer = 4
script = ExtResource("1_8neyt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=693581214]
visible = false
position = Vector2(-3, -2)
shape = SubResource("CapsuleShape2D_bs4jm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=958946885]
position = Vector2(-0.49999702, -0.49999642)
scale = Vector2(1.578125, 1.578125)
sprite_frames = SubResource("SpriteFrames_k3hpn")
animation = &"Idle"
autoplay = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1277369317]
root_node = NodePath("../AnimatedSprite2D")
libraries/ = SubResource("AnimationLibrary_pftsd")
autoplay = &"Idle"

[node name="AttackDirection" type="Node2D" parent="." unique_id=881217986]

[node name="AttackRange" type="Area2D" parent="AttackDirection" unique_id=1809228157]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange" unique_id=619279502]
position = Vector2(20, -5)
shape = SubResource("RectangleShape2D_8neyt")

[node name="DamageBox" parent="AttackDirection" unique_id=500668795 instance=ExtResource("3_opxtk")]

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0" unique_id=671054051]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HurtBox" index="0" unique_id=1099071565]
position = Vector2(-3, 0)

[node name="HitBox" parent="AttackDirection/DamageBox" index="1" unique_id=1371413932]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0" unique_id=972444790]
position = Vector2(17, -4)

[node name="MobsHealth" parent="." unique_id=759131617 instance=ExtResource("4_vf8bf")]
position = Vector2(0, -30)
scale = Vector2(0.7, 0.7)
max_health = 10

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HurtBox" to="MobsHealth" method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="damage_received" from="MobsHealth" to="." method="_on_mobs_health_damage_received"]
[connection signal="no_health" from="MobsHealth" to="." method="_on_mobs_health_no_health"]

[editable path="AttackDirection/DamageBox"]
